--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -11,5 +11,10 @@ spring.datasource.password=
 spring.datasource.driver-class-name=org.h2.Driver
 
 #JPA
-spring.jpa.hibernate.ddl-auto=update
+spring.jpa.hibernate.ddl-auto=validate
 spring.jpa.show-sql=true
+
+#Flyway
+spring.flyway.enabled=true
+spring.flyway.locations=classpath:db/migration
+spring.flyway.baseline-on-migrate=true
